fix database url and port

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT='4000'
-BDURL='mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.7.1'
+PORT='4001'
+BDURL='mongodb+srv://mardo:mardo@cluster0.vcwwvfc.mongodb.net/?retryWrites=true&w=majority'
 JWT_EXPIRES_IN= "5d"
 JWT_SECRET = "yuding-the-best-restauration-booking-platform"
 NODE_ENV = "development"
